After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694314 - Fails to build with --enable-systemd
Fails to build with --enable-systemd
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-20 22:12 UTC by Kalev Lember
Modified: 2013-02-21 21:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing include when built with systemd support (694 bytes, patch)
2013-02-20 22:13 UTC, Kalev Lember
none Details | Review

Description Kalev Lember 2013-02-20 22:12:58 UTC
gnome-system-monitor 3.7.90 fails to build with --enable-systemd:

procman-app.cpp: In function 'gboolean procman_get_tree_state(GSettings*, GtkWidget*, const gchar*)':
procman-app.cpp:454:30: error: 'sd_booted' was not declared in this scope
Comment 1 Kalev Lember 2013-02-20 22:13:48 UTC
Created attachment 236986 [details] [review]
Add missing include when built with systemd support
Comment 2 Robert Roth 2013-02-21 21:19:37 UTC
Thanks for the note and the patch. 
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.