Add missing include when built with systemd support https://bugzilla.gnome.org/show_bug.cgi?id=694314