src/procman-app.cpp
@@ -4,6 +4,10 @@
 #include <glibtop.h>
 #include <glibtop/close.h>
 
+#ifdef HAVE_SYSTEMD
+#include <systemd/sd-daemon.h>
+#endif
+
 #include "procman-app.h"
 #include "interface.h"
 #include "proctable.h"
